# caelus

./: .gitignore  LICENSE  README.md  hatch.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  x.csv
.ipython/: history.sqlite  ipython_config.py  ipython_kernel_config.py
.ipython/startup/: 00_import.py
caelus/: __init__.py  classifier.py  data.py  filters.py  options.py
src/caelus/: __init__.py  cli.py  data.py  diagnostics.py  filters.py  options.py  skytype.py
