[metadata]
name = caelus
version = 0.1.0
description = CAELUS: Classification Algorithm for the Evaluation of the cLoUdless Situations
author = Jose A Ruiz-Arias
author_email = jararias@uma.es
url = https://github.com/jararias/caelus
long_description = file: README.md
long_description_content_type = text/x-markdown
license = file: LICENSE
classifiers = 
    Natural Language :: English
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
